<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_hardware</name>
  <version>0.0.1</version>
  <description>
    ros2_control SystemInterface plugin for a differential drive robot
    using micro-ROS over UART. Bridges ros2_control velocity commands to
    /cmd_vel and reads /joint_states feedback from an ESP32.
  </description>
  <maintainer email="jishnu.r2022@vitstudent.ac.in">jishnu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Needed at both build time (headers) and runtime (shared libraries). -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>